--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
    <application
-        android:label="Hess"
+        android:label="SCBApp"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
