--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.2.2
   permission_handler: ^10.2.0
   shared_preferences: ^2.0.15
+  mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
   flutter_test:
