--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,15 @@ dependencies:
   permission_handler: ^10.2.0
   shared_preferences: ^2.0.15
   mask_text_input_formatter: ^2.4.0
+  flutter_native_splash: ^2.2.14
+  flutter_shake_animated: ^0.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^5.0.3
   build_runner: ^2.3.2
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: "^0.11.0"
   flutter_lints: ^2.0.0
   freezed: ^2.2.0
   json_serializable: ^6.5.1
@@ -64,6 +66,15 @@ flutter_icons:
   remove_alpha_ios: true
   image_path: "lib/assets/drawable/app_icon.png"
   min_sdk_android: 24
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  android_12:
+    image: lib/assets/drawable/app_splash_icon.png
+    branding: lib/assets/drawable/splash_label.png
+    color: "#FFFFFF"
+  ios: false
+  web: false
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
