--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   flutter_native_splash: ^2.2.14
   flutter_shake_animated: ^0.0.5
+  syncfusion_flutter_charts: ^20.3.57
 
 dev_dependencies:
   flutter_test:
